--- a/backend/ai_chat/qa_demo.ipynb
+++ b/backend/ai_chat/qa_demo.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "9ec23ebd-307e-49f3-921b-70a14dfab13f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from generate import generate_answer"
+    "from generate import generate_answer, get_prompt"
    ]
   },
   {
