ai questions processing in the chat

--- a/backend/ai_chat/qa_demo.ipynb
+++ b/backend/ai_chat/qa_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "9ec23ebd-307e-49f3-921b-70a14dfab13f",
    "metadata": {},
    "outputs": [],
@@ -77,12 +77,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "id": "069b959f-460a-47b2-a05a-b8cf01075e5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_reviews = [\n",
+    "    (\"What?\", \"Great course! The guest lectures from industry leaders were very inspiring.\"),\n",
+    "    (\"\", \"Trop de théorie, pas assez de pratique. Les exemples étaient intéressants mais souvent trop abstraits.\"),\n",
+    "    (\"\", \"The weekly presentations were challenging but helped solidify the course content.\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "3f0e5ca1-1aac-423d-9fbb-3c3944e7b182",
    "metadata": {},
    "outputs": [],
    "source": [
     "course_name = \"AI product management\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bf9461ce-e7ff-4dda-ac81-e6ade5c68275",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are an assistant summarizing student course reviews. Based solely on the reviews provided, answer the student's question concisely and directly.\n",
+      "\n",
+      "Do not infer or add information not present in the reviews. If the reviews do not contain relevant information, respond:\n",
+      "\"Based on course reviews, I cannot provide an answer. I'll save your question and will ask it to students who took this course.\"\n",
+      "\n",
+      "Ensure the response is compact, dense, and includes all key details from the reviews without redundancy. Format your response clearly for quick readability.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "**Course Name:** AI product management\n",
+      "**Student Question:** Do TAs make pizza parties?\n",
+      "\n",
+      "**Course Reviews:**\n",
+      "- Question: \"What?\" Answer: \"Great course! The guest lectures from industry leaders were very inspiring.\"\n",
+      "- Trop de théorie, pas assez de pratique. Les exemples étaient intéressants mais souvent trop abstraits.\n",
+      "- The weekly presentations were challenging but helped solidify the course content.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"Do TAs make pizza parties?\"\n",
+    "print(get_prompt(question, sample_reviews, course_name))"
    ]
   },
   {
